Made some corrections to the chat-messages::webkit scrollbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -73,7 +73,6 @@ body{
 }
 .chat-messages::-webkit-scrollbar{
     display: none;
-    padding: 0.625em;
 }
 
 .message{
